# CC3S2

./: .gitattributes  .gitignore  requirements.txt
.github/workflows/: act07ci.yml  pe.yml
Prueba_entrada_CC3S2/: CHANGELOG.md  README.md
Prueba_entrada_CC3S2/trivia-game-python/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_api.py  test_trivia.py  trivia.py
Prueba_entrada_CC3S2/trivia_game_python/: .env.example  Dockerfile  Makefile  docker-compose.yml  locustfile.py  main.py  pyproject.toml  requirements.txt  test_trivia.py  trivia.py
Prueba_entrada_CC3S2/trivia_game_python/test/: test_api.py  test_trivia.py
actividades/: Makefile
actividades/01/: README.md
actividades/02/: Makefile  README.md
actividades/03/: README.md  main.py
actividades/04/: README.md  main.py
actividades/05/: README.md  README3.md
actividades/06/: README.md
actividades/07/: Instrucciones.md  README.md
actividades/08/: Instrucciones.md  README.md
actividades/09/: README.md
actividades/10/: README.md  setup.cfg
actividades/11/: README.md  setup.cfg
actividades/12/: README.md  requirements.txt
actividades/13/: README.md  requirements.txt
actividades/14/: README.md  setup.cfg
actividades/15/: README.md
actividades/16/: README.md  counter.py  status.py  test_counter.py
actividades/17/: README.md
actividades/18/: README.md
actividades/19/: README.md
actividades/20/: README.md
actividades/21/: README.md
actividades/22/: README.md
actividades/23/: README.md
actividades/26/: README.md
actividades/27/: README.md
(+101 files in other folders)
